<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="audio_name">Music</string> -->
    <!-- <string name="radio_name">Radio</string> -->
    <!-- <string name="video_name">Video</string> -->
    <!-- <string name="auxin_name">AVIN</string> -->
    <!--     <string name="tag_name">RadioPlayer</string> -->

    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_point">.</string>

    <string name="toolbar_text_gps">Navigation</string>
    <string name="toolbar_text_bluetooth_music">BT Music</string>
    <!--     <string name="bluetooth_settings">BT</string> -->
    <string name="toolbar_text_radio">Radio</string>
    <string name="toolbar_text_music">Music</string>
    <string name="toolbar_text_video">Video</string>
    <string name="toolbar_text_tv">TV</string>
    <string name="toolbar_text_dvd">Disc</string>
    <string name="toolbar_text_dvr">DVR</string>
    <string name="toolbar_text_auxin">AUX IN</string>
    <string name="radio_function_text_dx">DX</string>
    <string name="radio_function_text_loc">LOC</string>
    <string name="radio_function_text_as">AS</string>
    <string name="radio_function_text_ps">PS</string>
    <string name="radio_function_text_band">BAND</string>
    <string name="radio_function_text_scan">SCAN</string>
    <string name="radio_function_text_pty">PTY</string>
    <string name="radio_function_text_frq">FRQ</string>
    <string name="radio_function_text_eq">EQ</string>
    <string name="radio_function_text_reg">REG</string>
    <string name="radio_function_text_ta">TA</string>
    <string name="radio_function_text_af">AF</string>
    <string name="radio_frequency_modulation_1">FM1</string>
    <string name="radio_frequency_modulation_2">FM2</string>
    <string name="radio_frequency_modulation_3">FM3</string>
    <string name="radio_frequency_modulation">FM</string>
    <string name="radio_amplitude_modulation">AM</string>
    <string name="radio_st">ST</string>
    <string name="radio_ta">TA</string>
    <string name="radio_tp">TP</string>

    <string name="radio_ams">AMS</string>
    <string name="radio_rds">RDS</string>
    <string name="radio_aps">APS</string>
    <string name="radio_megahertz">MHz</string>
    <string name="radio_kilohertz">KHz</string>
    <string name="radio_frequency_unit"> MHz</string>
    <string name="radio_pty">PTY:%1$s</string>
    <string name="app_eq">com.eqset.intent.action.EQActivity</string>
    <string name="widget_app_video">Video</string>
    <!--     <string name="mirror">Mirror</string> -->
    <string name="playlist">Playlist</string>
    <string name="sd">SD</string>
    <string name="sd2">SD2</string>
    <string name="usb">USB</string>
    <string name="usb2">USB2</string>
    <string name="usb3">USB3</string>
    <string name="usb4">USB4</string>
    <string name="media">Flash</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="song">Song:</string>
    <string name="unknown">Unknown</string>
    <string name="device_mount">device mount</string>
    <string name="device_eject">device eject</string>
    <string name="scanning">Scanning Media Files</string>
    <string name="disconnect_video">No Signal!</string>
    <string name="play_fail">Play fail!</string>
    <string name="warning_driving">"Video is disabled for your safety!"</string>
    <string name="warning_driving_1992">"Driving status, video Closed, for your safety, please concentrate on driving"</string>
    <string name="warning_driving_1050">"Video is disabled for your safety!"</string>
    <string name="button_text_none"></string>
    <string name="LO">LO</string>
    <string name="HI">HI</string>
    <string name="temp_unic">°C</string>
    <string name="text_reverse_warning">warning</string>
    <string name="media_scanning">Media Scanning</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <!--     <string name="crv_sure_set_time">Are you sure set the time?\n It will turn off "update time auto by GPS".You Can turn on it in settings.</string> -->
    <!--     <string name="sd_mounted">SD Mounted</string> -->
    <!--     <string name="sd_eject">SD Eject</string> -->
    <!--     <string name="temp_unic_centigrade">°C</string> -->
    <!--     <string name="temp_unic_fahrenheit">°F</string> -->
    <!--     <string name="outdoor_temp">Temperature Outside:</string> -->
    <!--     <string name="app_name_widget">Source Select</string> -->
    <string name="a2dp_disconnect_info">device disconnected, search device:%s,  </string>
    <string name="a2dp_disconnect_info2">PIN:%s to connect</string>
    <string name="all_song">All Songs</string>
    <string name="all_video">All Videos</string>
    <string name="traffic">Traffic</string>
    <string name="f_camera">F-Camera</string>
    <string name="f_camera4">Caravan</string>
    <string name="title">Menu</string>
    <string name="sub">Subtitle</string>
    <string name="speaker">Channel</string>
    <string name="no_disk">No Disc!</string>
    <string name="no_tv">No TV Device!</string>
    <string name="loading">" "</string>


    <!--     <string name="wallpaper_instructions">Set wallpaper</string> -->
    <string name="pick_wallpaper">Wallpapers</string>

    <string name="screen_size_title">Select size of vice screen</string>
    <string name="if_reboot">System will reboot, continue?</string>
    <string name="switch_screen">Switch two screen</string>

    <string name="screen_view_select">Select the view show in vice screen</string>

    <string name="screen1_backlight">Backlight of the vice screen</string>


    <string name="cam1">Cam1</string>
    <string name="cam2">Cam2</string>
    <string name="cam3">Cam3</string>
    <string name="cam4">Cam4</string>

    <string name="root">ROOT</string>

    <string name="eq_text_classic">Classic</string>
    <string name="eq_text_pop">Pop</string>
    <string name="eq_text_rock">Rock</string>
    <string name="eq_text_jazz">Jazz</string>
    <string name="eq_text_user">User</string>
    <string name="eq_text_normal">Normal</string>


    <string name="ch">CH</string>
    <string name="ch_a">CH+</string>
    <string name="ch_m">CH-</string>


    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="rear">REAR</string>

    <string name="menu">MENU</string>
    <string name="rec">REC</string>
    <string name="exit">EXIT</string>


    <string name="no_lyric">no lyric</string>

    <string name="speed">SPEED</string>

    <string name="rpm">RPM</string>


    <string name="num_0">0</string>
    <string name="num_90">90</string>

    <string name="modulename">Device Name:</string>
    <string name="modulepassword">PIN Number:</string>
    <string name="btdisconnected">Bluetooth Disconnected</string>
    <string name="pleaseconnectedbt">Please connect with the phone</string>


    <string name="pty00">None</string>
    <string name="pty01">News</string>
    <string name="pty02">Affairs</string>
    <string name="pty03">Info</string>
    <string name="pty04">Sport</string>
    <string name="pty05">Educate</string>
    <string name="pty06">Drama</string>
    <string name="pty07">Culture</string>
    <string name="pty08">Science</string>
    <string name="pty09">Varied</string>
    <string name="pty10">Pop M</string>
    <string name="pty11">Rock M</string>
    <string name="pty12">Easy M</string>
    <string name="pty13">Light M</string>
    <string name="pty14">Classics</string>
    <string name="pty15">Other M</string>
    <string name="pty16">Weather</string>
    <string name="pty17">Finance</string>
    <string name="pty18">Children</string>
    <string name="pty19">Social</string>
    <string name="pty20">Religion</string>
    <string name="pty21">Phone In</string>
    <string name="pty22">Travel</string>
    <string name="pty23">Leisure</string>
    <string name="pty24">Jazz</string>
    <string name="pty25">Country</string>
    <string name="pty26">Nation M</string>
    <string name="pty27">Oldies</string>
    <string name="pty28">Folk M</string>
    <string name="pty29">Document</string>
    <string name="pty30">Test</string>
    <string name="pty31">Alarm!</string>


    <string name="dvr_recording_notice">DVR is recording, open dvr to preview video!</string>


    <string name="camera">Camera</string>
    <string name="side_camera">Side Camera</string>


    <string name="f_camera_1902">F-Camera</string>
    <string name="m_camera_1902">W-Camera</string>
    <string name="b_camera_1902">R-Camera</string>

    <string name="file_not_found">File not found!</string>

    <string name="bluetooth_device_context_connect">接続しますか？</string>
    <string name="bluetooth_device_context_disconnect">切断しますか？</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="outdoor_temp">室外温度: </string>
</resources>
